removed checkpoints; updated compilation instructions for LAMMPS

--- a/day-1/day-1.ipynb
+++ b/day-1/day-1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,8 +56,7 @@
     " `$ git checkout stable` <br>\n",
     " `$ git pull` <br>\n",
     " `$ cd src/` <br>\n",
-    " `$ cp USER-MISC/fix_gle.* .` <br>\n",
-    " `$ cp USER-MISC/fix_ipi.* .` <br>\n",
+    " `$ make yes-user-misc` <br>\n",
     " `$ make yes-class2` <br>\n",
     " `$ make yes-molecule` <br>\n",
     " `$ make yes-kspace` <br>\n",
@@ -65,9 +64,11 @@
     "\n",
     "\n",
     "Update  ```$PATH``` with the lammps-path by adding the following to the ~/.bashrc file:\n",
-    "```export PATH=\"${mylammps-path}/src:$PATH\"```\n",
+    " ```export PATH=\"MYLAMMPSPATH/src:$PATH\"```\n",
     "\n",
-    "`$ source ~/.bashrc`"
+    "`$ source ~/.bashrc`\n",
+    "\n",
+    "Note that here `MYLAMMPSPATH` implies the absolute path of the `mylammps` root directory."
    ]
   },
   {
@@ -654,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
