Added instructions to install i-PI (for the sake of completeness)

--- a/day-1/day-1.ipynb
+++ b/day-1/day-1.ipynb
@@ -46,6 +46,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h2>Installing i-pi </h2>\n",
+    "\n",
+    "This requires to have the i-pi git project cloned. \n",
+    "\n",
+    " `$ git clone https://github.com/i-pi/i-pi` <br>\n",
+    "\n",
+    "Since i-PI is python based, it doesn't require any compilation! To have access to the i-PI executables add the following to the ~/.bashrc file <br> \n",
+    "\n",
+    "\n",
+    " ```source MYIPIPATH/env.sh```\n",
+    "\n",
+    "and source your bashrc file\n",
+    "\n",
+    "`$ source ~/.bashrc`\n",
+    "\n",
+    "Note that here `MYIPIPATH` implies the absolute path of the `i-pi` root directory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h2>Compiling LAMMPS</h2>\n",
     "\n",
     "This requires to have the LAMMPS git project cloned. For this, we use the following procedure\n",
