cleaned up day- 1ex-1

--- a/day-1/day-1.ipynb
+++ b/day-1/day-1.ipynb
@@ -144,15 +144,17 @@
     "    `fix 1 all ipi 300K-G.0 32345 unix`\n",
     "    \n",
     "   is used, which basically means LAMMPS will only be in charge of the force evaluation and send that information to i-PI. The latter will take care of the motion and the analysis parts. All the information will be transmitted through a UNIX-domain socket with the name `300K-G.0`, which is a mechanism for local, inter-process communication. \n",
+    "    \n",
     "\n",
     "2. Now open the i-PI input file input.xml in the same folder.\n",
-    "For a moment let us ignore all the other entries but only focus on the followings\n",
+    "For a moment let us ignore all the other entries but only focus on the following\n",
     "    \n",
     "    ```<ffsocket name=\"tip4p\" pbc=\"true\" mode=\"unix\">``` <br>\n",
     "    ```<address> 300K-G.0 </address>``` <br>\n",
     "    ```  </ffsocket>```\n",
     "\n",
     "    This indicates that i-PI will receive any information sent by LAMMPS through the UNIX-domain socket with the tag `300K-G.0`, and send the coordinates of the nuclei in the system to LAMMPS for force evaluations using the same socket.\n",
+    "\n",
     "\n",
     "3. Let's run an i-PI+LAMMPS Molecular Dynamics simulation!\n",
     "Open a terminal at the current directory and launch i-PI by typing\n",
@@ -164,7 +166,8 @@
     "    `Created unix socket with address 300K-G.0` <br>\n",
     "    `@ForceField: Starting the polling thread main loop.`\n",
     "\n",
-    "   This means i-PI has started properly, has created the UNIX socket, and is waiting for communication from the clients that do force evaluations.\n",
+    "   This means i-PI has started properly, has created the UNIX socket, and is waiting for communication from the client(s) that do force evaluations.\n",
+    "\n",
     "\n",
     "4. Now it is a good time to start LAMMPS. Open up a second terminal either manually or by typing Ctrl+Shift+t and start LAMMPS by entering the command\n",
     "\n",
@@ -172,27 +175,32 @@
     "\n",
     "   Then LAMMPS should start and dump out some outputs.\n",
     "\n",
+    "\n",
     "5. Now switch to the terminal where i-PI is running, notice that i-PI has built the connection with LAMMPS with the message\n",
     "\n",
     "    `@SOCKET:   Client asked for connection from . Now hand-shaking.` <br>\n",
     "    `@SOCKET:   Handshaking was successful. Added to the client list.`\n",
     "\n",
     "   and started the Molecular Dynamics simulation. It should also dump out information on the time cost of each MD step. \n",
+    "  \n",
     "\n",
     "6. What we are going to do now is to kill LAMMPS. \n",
     "Simply switch to the terminal where LAMMPS is running and press Ctrl+c.\n",
     "Now look at whether i-PI is still running. \n",
     "Notice that although the evolution of MD is paused, i-PI itself\n",
-    "does not die off but instead continue to run and wait for new client to take over. \n",
+    "does not die off but just waits for a new client to take over. \n",
     "Now start LAMMPS again by typing\n",
     "\n",
     "   `$ lmp_serial < in.water` <br>\n",
     "   \n",
     "   What happens to i-PI now?\n",
     "\n",
+    "\n",
     "7. What if one stops i-PI? Kill i-PI by typing `Ctrl+c` where it is running, or create a file named `EXIT` in the folder where i-PI is running (you can use the bash command `touch EXIT` ). Watch how i-PI responds, and how LAMMPS reacts. Think about what are the advantages of a clean exit when a MD program stops unexpectedly.\n",
     "\n",
+    "\n",
     "8. Take a look at all the output files dumped by i-PI. You should have `gas-nvt-300k.out` that describe the system properties, gas-nvt-300k.xc.xyz that records the atomic trajectories, and RESTART that contains all the information to restart the simulation.\n",
+    "\n",
     "\n",
     "\n"
    ]
