h2o.xyz was corrupt

--- a/day-1/day-1.ipynb
+++ b/day-1/day-1.ipynb
@@ -46,9 +46,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Installing i-pi </h2>\n",
+    "<h2>Installing i-PI </h2>\n",
     "\n",
-    "This requires to have the i-pi git project cloned. \n",
+    "This requires to have the i-PI git project cloned. \n",
     "\n",
     " `$ git clone https://github.com/i-pi/i-pi` <br>\n",
     "\n",
@@ -303,7 +303,7 @@
     "\n",
     "<p>In this exercise we will perform a series of PIMD calculations to observe and benchmark nuclear quantum effects in a molecular system. \n",
     "    Our system of choice will be a single molecule of water in vacuum so that simulations don't take too much time and memory. \n",
-    "    We will be sampling an NVT ensemble using a q-TIP4P forcefield implemented within Lammps. \n",
+    "    We will be sampling the NVT ensemble using a q-TIP4P/f forcefield implemented within LAMMPS. \n",
     "    We will look at the change in the kinetic and potential energy and the Oxygen–Hydrogen pair distribution function as we simulate in the quantum regime.\n",
     "    \n",
     "\n",
