added CP2K compilation instructions

--- a/day-1/day-1.ipynb
+++ b/day-1/day-1.ipynb
@@ -85,12 +85,47 @@
     " `$ make serial`\n",
     "\n",
     "\n",
-    "Update  ```$PATH``` with the lammps-path by adding the following to the ~/.bashrc file:\n",
+    "Update  ```$PATH``` with the MYLAMMPSPATH by adding the following to the ~/.bashrc file:\n",
     " ```export PATH=\"MYLAMMPSPATH/src:$PATH\"```\n",
     "\n",
     "`$ source ~/.bashrc`\n",
     "\n",
     "Note that here `MYLAMMPSPATH` implies the absolute path of the `mylammps` root directory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Compiling / Installing CP2K </h2>\n",
+    "\n",
+    "A quick way to get access to precompiled cp2k binaries is by using conda\n",
+    "\n",
+    "`$ conda install -c conda-forge cp2k` <br>\n",
+    "\n",
+    "\n",
+    "The alternative requires to have the CP2K git project cloned. For this, we use the following procedure\n",
+    "https://github.com/cp2k/cp2k/blob/master/INSTALL.md that required building the required libraries using toolchain\n",
+    "\n",
+    " `$ git clone https://github.com/cp2k/cp2k` <br>\n",
+    " `$ cd cp2k/` <br>\n",
+    " `$ cd tools/toolchain/` <br>\n",
+    " `$ bash install_cp2k_toolchain.sh --with-libxsmm=install --with-openblas=system --with-fftw=system --with-reflapack=no  --enable-cuda` <br>\n",
+    "\n",
+    "On successful installation, toolchain will give further instructions on how to select your `ARCHITECTURE` file. To compile the serial version \n",
+    "\n",
+    "`$ make -j N ARCH=ARCHITECTURE VERSION=sopt`\n",
+    "\n",
+    "where `ARCHITECTURE` would correspond to the ARCH file as specified upon successful installation of the toolchain, and `N` is used to parallelize the compilation. \n",
+    "\n",
+    "Update  ```$PATH``` with the by adding the following to the ~/.bashrc file:\n",
+    " ```export PATH=\"MYCP2KPATH/exe/ARCHITECTURE/:$PATH\"```\n",
+    "\n",
+    "`$ source ~/.bashrc`\n",
+    "\n",
+    "Note that here `MYCP2KPATH` implies the absolute path of the `cp2k` root directory, and `ARCHITECTURE` implies the ARCH file as specified upon successful installation of the toolchain. \n",
+    "\n",
+    "For the purpose of the tutorial we recommend a quick installation using conda"
    ]
   },
   {
@@ -216,28 +251,26 @@
     "\n",
     "1. Let's take a close look at the units first - which are the source of many errors during simulation and analysis. All the units used internally by i-PI are atomic units, as given below.\n",
     "\n",
-    "\n",
-    "Unit        | Name          | SI value\n",
-    "------------|---------------|-----------------------\n",
-    "Length      | bohr radius   | 5.2917721e-11 m\n",
-    "Time        | n.a.          | 2.4188843e-17 s\n",
-    "Mass        | electron mass | 9.1093819e-31 kg\n",
-    "Temperature | hartree       | 315774.66 K\n",
-    "Energy      | hartree       | 4.3597438e-18 J\n",
-    "Pressure    | n.a.          | 2.9421912e13 Pa\n",
+    "    Unit        | Name          | SI value\n",
+    "    ------------|---------------|-----------------------\n",
+    "    Length      | bohr radius   | 5.2917721e-11 m\n",
+    "    Time        | n.a.          | 2.4188843e-17 s\n",
+    "    Mass        | electron mass | 9.1093819e-31 kg\n",
+    "    Temperature | hartree       | 315774.66 K\n",
+    "    Energy      | hartree       | 4.3597438e-18 J\n",
+    "    Pressure    | n.a.          | 2.9421912e13 Pa\n",
     "\n",
     "   By default, both input and output data are given in atomic units, but in most cases the default units can be overridden if one wishes so. For example, in `ex-2/input.xml` we used\n",
-    "   <br>\n",
-    "    ```<properties stride=\"1\" filename=\"out\"> [ step, time{picosecond}, conserved, temperature{kelvin},potential ] </properties>``` <br>\n",
-    "    ```<trajectory filename=\"xc\" stride=\"1\"> x_centroid{angstrom} </trajectory>```  <br>\n",
     "\n",
-    "   \n",
-    "   so that the time, temperature, and the trajectory will written out in the units of picosecond, Kelvin, and Angstrom in the output files, respectively. Similarly, the units of the initialization files can be specified such as \n",
-    "   <br>\n",
+    "    ```<properties stride=\"1\" filename=\"out\"> [ step, time{picosecond}, conserved, temperature{kelvin},potential ] </properties>``` <br>\n",
+    "    ```<trajectory filename=\"xc\" stride=\"1\"> x_centroid{angstrom} </trajectory>```\n",
+    "    \n",
+    "    so that the time, temperature, and the trajectory will written out in the units of picosecond, Kelvin, and Angstrom in the output files, respectively. Similarly, the units of the initialization files can be specified such as \n",
+    "\n",
     "    ```<file mode=\"xyz\" units=\"angstrom\"> h2o.xyz </file>``` <br>\n",
     "    ```<velocities mode=\"thermal\" units=\"kelvin\"> 300 </velocities>```\n",
-    "\n",
-    "When using i-PI, you can play around with the units to facilitate the initialization process as well as subsequent analyses.\n",
+    "    \n",
+    "    When using i-PI, you can play around with the units to facilitate the initialization process as well as subsequent analyses.\n",
     "Please note that i-PI can read the unit cell from the comment line in the `.xyz` file. The cell and positions in the CP2K input file is just for the purpose of initializating the CP2K program and at the first simulation step both would be overridden.\n",
     "\n",
     "\n",
