--- a/day-1/day-1.ipynb
+++ b/day-1/day-1.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "<h2>Compiling / Installing CP2K </h2>\n",
     "\n",
-    "A quick way to get access to precompiled cp2k binaries is by using conda\n",
+    "A quick way to get access to precompiled CP2K binaries is by using conda\n",
     "\n",
     "`$ conda install -c conda-forge cp2k` <br>\n",
     "\n",
@@ -125,7 +125,7 @@
     "\n",
     "Note that here `MYCP2KPATH` implies the absolute path of the `cp2k` root directory, and `ARCHITECTURE` implies the ARCH file as specified upon successful installation of the toolchain. \n",
     "\n",
-    "For the purpose of the tutorial we recommend a quick installation using conda"
+    "For the purpose of the tutorial we recommend a quick installation using conda."
    ]
   },
   {
@@ -147,7 +147,7 @@
     "\n",
     "The time domain can then be discretized into small and finite time steps with length $\\Delta t$ . The key processes of a molecular dynamics run are illustrated in the flowchart below. At the initialization stage, the program is informed about some basic information about the system, such as the number of atoms, their types, system size, etc. After that, the program goes through the loop “Forces → Motion → Analysis” once per discrete simulation time step. The force acting on each atom\n",
     "\n",
-    "$$f_i = \\dfrac{\\partial V(\\mathbf{q})}{\\partial q_i}$$\n",
+    "$$f_i = -\\dfrac{\\partial V(\\mathbf{q})}{\\partial q_i}$$\n",
     "\n",
     "is evaluated first, and are then used to advance the momenta and the coordinates of the nucleus.\n",
     "\n",
