day-1 update getRDF

--- a/day-1/day-1.ipynb
+++ b/day-1/day-1.ipynb
@@ -31,6 +31,7 @@
     "from IPython.display import HTML\n",
     "from checklist import fileChecker\n",
     "from autocorr import autoCorr\n",
+    "from getRDF import RDF\n",
     "fileChecker()\n"
    ]
   },
@@ -371,9 +372,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. To compute the oxygen–hydrogen pair correlation function we suggest you to use `get_rdf.py` and follow the syntax as shown.\n",
+    "5. To compute the oxygen–hydrogen pair correlation function we suggest you to use `getRDF.py` and follow the syntax as shown.\n",
     "\n",
-    "    `$ python get_rdf.py $prefix \"xyz\" O H 200 0. 2. 0.1`\n",
+    "    `$ python ../../getRDF.py $prefix \"xyz\" O H 200 0. 2. 0.1`\n",
     "\n",
     "    Where the flag activates the computation of a pair correlation for atom types specified in the call between a minimum and a maximum distance given, creating a histogram with a specified resolution.\n",
     "    Use the cell below to plot the resulting radial distribution function.\n",
@@ -386,6 +387,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.chdir('ex-3/n.01/')\n",
+    "RDF('simulation', \"xyz\", 'O', 'H', 200, 0., 2., 0.1)\n",
+    "os.chdir('../../')\n",
+    "\n",
     "infile = 'ex-3/n.01/simulation.OH.rdf.dat'\n",
     "if not (os.path.isfile(infile)): print('You are missing the file: '+infile+\n",
     "                                      '\\nHave you calculated the OH pair correlation function?')\n",
@@ -436,7 +441,7 @@
     "\n",
     "\n",
     "9. The folders `n.*` have already been prepared for you to run simulations with increasing numbers of beads. You should start one PIMD calculation in each of those folders.\n",
-    "    Compute the pair correlation function and the energy for all the simulations using the scripts `autocorr.py` and `get_rdf.py`."
+    "    Compute the pair correlation function and the energy for all the simulations using the scripts `autocorr.py` and `getRDF.py`."
    ]
   },
   {
@@ -517,6 +522,10 @@
     "fig,ax = plt.subplots(figsize=(12,7))\n",
     "\n",
     "for i in beads:\n",
+    "    os.chdir('ex-3/n.%s/'%i)\n",
+    "    RDF('simulation', \"xyz\", 'O', 'H', 200, 0., 2., 0.1)\n",
+    "    os.chdir('../../')\n",
+    "    \n",
     "    infile = 'ex-3/n.'+str(i)+'/simulation.OH.rdf.dat'\n",
     "    if not (os.path.isfile(infile)): print('You are missing the file: '+infile+\n",
     "                                      '\\nHave you run the command: ./extract-gOH.bash ?')\n",
@@ -553,9 +562,9 @@
     "    `$ i-pi input.xml &> log.ipi &` <br>\n",
     "    `$ cp2k.ssmp in.cp2k &> log.cp2k &` \n",
     "\n",
-    "2. To compute the Hydrogen–Hydrogen pair correlation function we suggest you to use `get_rdf.py` and follow the syntax as shown. </li>\n",
+    "2. To compute the Hydrogen–Hydrogen pair correlation function we suggest you to use `getRDF.py` and follow the syntax as shown. </li>\n",
     "\n",
-    "   `$ python get_rdf.py simulation \"pdb\" H H 200 0. 3. 0.1`\n",
+    "   `$ python ../../getRDF.py simulation \"pdb\" H H 200 0. 3. 0.1`\n",
     "\n",
     "3. We are going to visualize the difference in the pair distributions functions with and without PIMD. To get smoothened radial distribution functions we are using a Bartlett window."
    ]
@@ -574,6 +583,9 @@
     "fig,ax = plt.subplots()\n",
     "\n",
     "for i in beads:\n",
+    "    os.chdir('ex-4/n.'+str(i))\n",
+    "    RDF('simulation', \"pdb\", 'H', 'H', 200, 0., 3., 0.1)\n",
+    "    os.chdir('../../')\n",
     "    infile = 'ex-4/n.'+str(i)+'/simulation.HH.rdf.dat'\n",
     "    if not (os.path.isfile(infile)): print('You are missing the file: '+infile+\n",
     "                                      '\\nHave you calculated the pair correlation function?')\n",
@@ -619,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
