replaced scripts with symlinks

--- a/day-1/day-1.ipynb
+++ b/day-1/day-1.ipynb
@@ -29,10 +29,10 @@
     "from ipi.utils.messages import verbosity\n",
     "from matplotlib import pyplot as plt\n",
     "from IPython.display import HTML\n",
-    "from checklist import fileChecker\n",
+    "#from checklist import fileChecker\n",
     "from autocorr import autoCorr\n",
     "from getRDF import RDF\n",
-    "fileChecker()\n"
+    "#fileChecker()\n"
    ]
   },
   {
@@ -365,7 +365,7 @@
     "infile = 'ex-3/n.01/simulation.out'\n",
     "if not (os.path.isfile(infile)): print('You are missing the file: '+infile+\n",
     "                                      '\\nHave you run i-pi in the correct directory (n.01)?')\n",
-    "mean,error = autoCorr('ex-3/n.01/simulation.out', nbead=1, columns=[5], mlag=10, nequi=99, dt=1.0, verbosity = 2)"
+    "mean,error = autoCorr('ex-3/n.01/simulation.out', nbead=1, columns=[5], mlag=10, nequi=99, dt=1.0, verbosity = 2, ncol=6)"
    ]
   },
   {
