--- a/day-2/day-2.ipynb
+++ b/day-2/day-2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<h1>Day-2</h1>\n",
     "<h2>Advanced Path Integral Methods in a Simulation of Water Across its Phase Diagram</h2>\n",
-    "<h3>Michele Ceriotti</h3>\n",
+    "<h3>Michele Ceriotti, Venkat Kapil, Eszter Sarolta Pos</h3>\n",
     "\n",
     "\n",
     "In this set of exercises we will perform simulations of room-temperature liquid water, using a simple empirical forcefield model based on TIP4P-like point charges [1]. We will start from quickly checking the convergence of standard path integral molecular dynamics, and then use this example to test a number of advanced PI features. For the sake of speed of execution, we will use a very small (32 molecules) simulation box. However, if you have more time to carry out the exercise, you can modify the input to use the initial configurations in `data/water-216.pdb` . You should be able to complete at least the first three exercises in a couple of hours. \n",
